# CholeskySYCL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_plssvm.sh  create_env.sh  delete_env.sh  load.sh
archive/CholeskyPrototype/: .gitignore  CMakeLists.txt  flake.nix
archive/CholeskyPrototype/src/: main.cpp
archive/SYCLPrototype/: CMakeLists.txt  times.txt
archive/SYCLPrototype/include/: benchmark.hpp  matrix.hpp  solve.hpp
archive/SYCLPrototype/include/cpu/: simple_blocked_cholesky.hpp
archive/SYCLPrototype/include/gpu/: simple_blocked_cholesky.hpp
archive/SYCLPrototype/src/: cholesky_blockwise.cpp  cholesky_columnwise.cpp  cpu_cholesky.cpp  gpu_cholesky.cpp  main_buffer.cpp  main_cholesky_paddedtrianglemem.cpp  main_cholesky_trianglemem.cpp  main_optimized.cpp  main_optimized_naive.cpp  main_usm.cpp
benchscripts/: 01-benchtest-cholesky.sh  02-benchtest-cholesky.sh  03-benchtest-cholesky.sh  04-benchtest-cholesky.sh  05-benchtest-cholesky.sh  06-benchtest-cholesky.sh  06cpu-benchtest-cholesky.sh  07-benchtest-cholesky.sh  bsub-benchtest-cholesky.sh  fsub-benchtest-cholesky.sh  generate-bench-n3.sh  generate-bench-n4.sh  value-benchtest-cholesky.sh
include/: benchmark.hpp  gpu.hpp  kernels.hpp  math.hpp  matrix.hpp  microbench.hpp  time.hpp  validate.hpp
py/: datagen-vecs.py  datagen.py  generateplots-all.py  generateplots.py  readdata.py  validatedata.py
src/: 01.cpp  02.cpp  03.cpp  04.cpp  05-singleline.cpp  05.cpp  06.cpp  06cpu.cpp  07.cpp  backwardsubstitution.cpp  cholesky.cpp  forwardsubstitution.cpp  microbench.cpp
