cmake_minimum_required(VERSION 3.5) # setting this is required
project(CholeskyPrototype)          # this sets the project name

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

###############################################################################
## file globbing ##############################################################
###############################################################################

file(GLOB_RECURSE sources src/*.cpp)

###############################################################################
## target definitions #########################################################
###############################################################################

add_executable(prototype src/main.cpp)
target_compile_options(prototype PUBLIC -std=c++23 -Wall)
target_include_directories(prototype PUBLIC include)

###############################################################################
## dependencies ###############################################################
###############################################################################

###############################################################################
## testing ####################################################################
###############################################################################

###############################################################################
## packaging ##################################################################
###############################################################################
